Fix front page layout bugs.

--- a/sites/all/themes/educloud_portal/sass/styles.scss
+++ b/sites/all/themes/educloud_portal/sass/styles.scss
@@ -286,10 +286,6 @@ div#pre-footer-image {
     word-wrap: break-word;
 }
 
-.front .views-row.views-row-1.views-row-odd.views-row-first {
-    margin-right: 30px;
-}
-
 .view-contact .views-row {
   max-width: 350px;
   float: left;
@@ -529,7 +525,7 @@ div#pre-footer-image {
 }
 
 body.front article.node-7 {
-  max-width: 70%;
+  max-width: 400px;
   margin: 0 auto;
 }
 
@@ -584,32 +580,16 @@ article.node {
     max-width: 265px;
 }
 
-.view-educloud-frontpage-featured-articles {
-  display: inline-block;
-}
-
-.view-educloud-frontpage-featured-articles .views-row.views-row-1 {
-  max-width: 380px;
-  display: inline-block;
-}
-
-.view-educloud-frontpage-featured-articles .views-row.views-row-2 {
-  display: inline-block;
-  margin-right: 45px;
+.view-educloud-frontpage-featured-articles .views-row {
   max-width: 360px;
+  float: left;
+  margin-right: 20px;
+  min-height: 500px;
 }
-
-.view-educloud-frontpage-featured-articles .views-row.views-row-3 {
-  max-width: 390px;
-  display: inline-block;
-}
-
 
 .views-row-1 .front-featured-bottom-txt {
     max-width: 305px;
 }
-
-
 
 .view-educloud-frontpage-featured-articles p {
   font-size: 16px;
@@ -664,9 +644,9 @@ article.node {
     display: none;
 }
 
-.view-educloud-frontpage-featured-articles .views-field-field-link .field-content {
-    height: 43px;
-    margin-top: 50px;
+.view-educloud-frontpage-featured-articles .views-field-field-link {
+  height: 43px;
+  margin-top: 4em;
 }
 
 .view-educloud-frontpage-featured-articles .views-field-field-link .field-content > a {
